# coverpage-scanner-backend

./: .dockerignore  API_SPEC.md  Cargo.toml  Dockerfile
src/: main.rs  room_manager.rs
src/models/: mod.rs  room.rs
src/ocr/: mod.rs
src/pipeline/: mod.rs
src/pipeline/steps/: mod.rs
