[package]
name = "deckblattscanner-backend"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
axum = { version = "0.8.8", features = ["multipart", "ws"] }
dashmap = "6.1.0"
futures-util = "0.3.31"
image = "0.25.10"
ocrs = "0.12.2"
rand = { version = "0.10.0", features = ["std_rng"] }
rqrr = "0.10.1"
rten = "0.24.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.51.0", features = ["full"] }
tower-http = { version = "0.6.8", features = ["cors", "trace"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
uuid = { version = "1.23.0", features = ["serde", "v4"] }
